--- a/blocks/media-placeholder/media-placeholder.css
+++ b/blocks/media-placeholder/media-placeholder.css
@@ -30,7 +30,7 @@
   border-radius: 16px;
   overflow: hidden;
   width: 100%;
-  height: 400px;
+  height: 450px;
   position: relative;
 }
 
@@ -48,6 +48,6 @@
   }
 
   .media-placeholder-3d {
-    height: 500px;
+    height: 550px;
   }
 }
